Fixed projects page and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,31 @@ a {
     color: black;
 }
 
-.projects{
-    float: right;
-    width: 100%;
-    margin-bottom: 20px;
+.project-info{
+	border: 1px solid black;
 }
+.project-info{
+	padding: 20px;
+	color: black;
+}
+.project-info h3{
+    text-align: center;
+	padding-bottom: 16px;
+	color: black;
+	font-weight: 600;
+}
+.project-info-btn {
+    margin: 15px 10px 5px;
+    display: inline-block;
+    border: solid black 2px;
+    padding: 3px 8px;
+    font-size: 12px;
+    color: black;
+    font-weight: 400 !important;
+    cursor: pointer;
+}
+
+
 .fa-cog {
     color: black;
 }
